# CMAKE_CREATE_SIMPLE_DEB

./: .gitignore  CMakeLists.txt  README.md  changelog  copyright
cmake/: Packing.cmake
src/: CMakeLists.txt  weight.cpp
